# noaha.org

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  live-reload.py  pyproject.toml  shell.nix
backend/: __init__.py  __main__.py  server.py  wsgi.py
backend/data/: README.md  store.py
backend/data/adapters/: __init__.py  blog.py  blog_adapter.py  users.py  users_adapter.py
backend/data/connectors/: sqlite.py
backend/data/schemas/: __init__.py  users.py
backend/hypertext/: __init__.py  blog.py  common.py  helpers.py  home.py  pages.py
backend/models/: __init__.py  blog.py
backend/web/: __init__.py  __main__.py  markdown.py  server.py  wsgi.py
backend/web/data/: store.py
backend/web/data/adapters/: __init__.py  _sqlite.py  blog.py  users.py
backend/web/data/connectors/: sqlite.py
backend/web/data/schemas/: __init__.py  blog.py
backend/web/hypertext/: README.md  __init__.py  blog.py  common.py  helpers.py  home.py  pages.py
backend/web/models/: __init__.py  blog.py
content/: about.md
content/blog/: future.md  hello.md  motion.md  motivations.md  platform.md  semantics.md  tier-iii.md
frontend/: bundle.js  package.json  pnpm-lock.yaml
frontend/css/: main.css
frontend/css/elements/: page.css
frontend/css/generic/: pico-overrides.css
frontend/css/objects/: card.css  frets-embed.css  header.css  post-list.css  post.css
frontend/css/settings/: fonts.css
frontend/vanillajs/: index.js
tests/: test_db.py
